--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -14,11 +14,6 @@ layout: default
   publications/?search={% for alias in aliases %}"{{ alias }}" {% endfor %}
 {%- endcapture %}
 
-<p class="center">
-  <a href="{{ search | relative_url }}">
-    Search for {{ page.name | default: page.title }}'s papers on the Research page
-  </a>
-</p>
 
 
 
@@ -28,15 +23,20 @@ layout: default
 
 <div>
   {% for link in page.links %}
-    {% assign key = link[0] %}
-    {% assign value = link[1] %}
-    {% include button.html type=key link=value style="bare" %}<br>
+  {% assign key = link[0] %}
+  {% assign value = link[1] %}
+  {% include button.html type=key link=value style="bare" %}<br>
   {% endfor %}
 </div>
 
 {% endcapture %}
 
 {% include float.html content=floatcontent %}
+<p class="center">
+  <a href="{{ search | relative_url }}">
+    Search for {{ page.name | default: page.title }}'s papers on the Publications page
+  </a>
+</p>
 
 {{ content }}
 
