fix font-awesome problem

--- a/_includes/fallback.html
+++ b/_includes/fallback.html
@@ -1,1 +1,1 @@
-onerror="this.src = '{{ "images/fallback.svg" | relative_url }}'; this.onerror = null;"
+onerror="this.src = '{{ "images/share.png" | relative_url }}'; this.onerror = null;"
