--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
     data-big
   {% endif %}
 >
-  <a href="{{ relative_url }}" class="home">
+  <a href="/" class="home">
     {% if logo %}
       <span class="logo">
         {% if svg %}
