fix minor css error

--- a/_styles/section.scss
+++ b/_styles/section.scss
@@ -5,7 +5,7 @@ $page: 1000px;
 $padding: 40px;
 
 section {
-  padding: $padding max($padding, calc((100% - $page) / 2));
+  padding: $padding unquote("max(#{$padding}, calc((100% - #{$page}) / 2))");
   transition-property: background, color;
 }
 
